# screenshot-plugin

./: screenshot-plugin.sln
DotNetWrapper/: DotNetWrapper.csproj  Program.cs  events.json  libScreenshotPlugin.dylib  libScreenshotPluginPIP.dylib  request.json
ScreenshotPlugin/: CMakeCache.txt  CMakeLists.txt  Makefile  abc.cpp  c_cpp_properties.json  cmake_install.cmake  libScreenshotPlugin.dylib  libScreenshotPluginPIP.dylib  plugin.cpp
